--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,14 +1,3 @@
 <section>
-
-
-
-  <%= form_with model: @user do |form| %>
-   <%= form.text_field :username %>
-   <%= form.label :username, "Username" %>
-   <%= form.email_field :email, placeholder: "jo@jo.com" %>
-   <%= form.label :email, "Email" %>
-   <%= form.text_field :password %>
-   <%= form.label :password, "Password" %>
-   <%= form.submit "Submit" %>
-  <% end %>
+  <%= render "user_fields" %>
 </section>
